--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_gravity="center"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:entries="@array/beer_colors"/>
 
 
 
@@ -25,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:text="Button" />
+        android:text="@string/find_beer" />
 
     <TextView
         android:id="@+id/brands"
@@ -33,6 +34,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:text="this is a text view" />
+        android:text="@string/brands"/>
 
 </LinearLayout>
